gudang, bikin data brg bisa diedit pake form

--- a/Code/gudang/gudang.html
+++ b/Code/gudang/gudang.html
@@ -126,140 +126,179 @@
                         <p class="harga">HARGA (Satuan)</p>
                     </div>
                 </div>
-                <div class="bagianTengahBawah">
-                    <div class="cardBawah">
-                        <div class="bagian">
-                            <p class="namaBrg2">Kusuka</p>
+                <form action="" method="post">
+                    <div class="bagianTengahBawah">
+                        <div class="cardBawah">
+                            <div class="bagian">
+                                <label for="namaAwal" class="namaAwal" id="namaAwal">Kusuka</label>
+                                <input type="text" name="nama" id="nama" class="nama displayNone" value="Kusuka" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="stokAwal" class="stokAwal" id="stokAwal">120</label>
+                                <input type="text" name="stok2" id="stok2" class="stok2 displayNone" value="120" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="hargaAwal" class="hargaAwal" id="hargaAwal">Rp15.000</label>
+                                <input type="text" name="harga2" id="harga2" class="harga2 displayNone" value="Rp15.000" disabled>
+                            </div>
                         </div>
-                        <div class="bagian">
-                            <p class="stok2">120</p>
+                        <div class="cardBawah">
+                            <div class="bagian">
+                                <label for="namaAwal" class="namaAwal" id="namaAwal">Kusuka</label>
+                                <input type="text" name="nama" id="nama" class="nama displayNone" value="Kusuka" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="stokAwal" class="stokAwal" id="stokAwal">120</label>
+                                <input type="text" name="stok2" id="stok2" class="stok2 displayNone" value="120" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="hargaAwal" class="hargaAwal" id="hargaAwal">Rp15.000</label>
+                                <input type="text" name="harga2" id="harga2" class="harga2 displayNone" value="Rp15.000" disabled>
+                            </div>
                         </div>
-                        <div class="bagian">
-                            <p class="harga2">Rp15.000</p>
+                        <div class="cardBawah">
+                            <div class="bagian">
+                                <label for="namaAwal" class="namaAwal" id="namaAwal">Kusuka</label>
+                                <input type="text" name="nama" id="nama" class="nama displayNone" value="Kusuka" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="stokAwal" class="stokAwal" id="stokAwal">120</label>
+                                <input type="text" name="stok2" id="stok2" class="stok2 displayNone" value="120" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="hargaAwal" class="hargaAwal" id="hargaAwal">Rp15.000</label>
+                                <input type="text" name="harga2" id="harga2" class="harga2 displayNone" value="Rp15.000" disabled>
+                            </div>
                         </div>
+                        <div class="cardBawah">
+                            <div class="bagian">
+                                <label for="namaAwal" class="namaAwal" id="namaAwal">Kusuka</label>
+                                <input type="text" name="nama" id="nama" class="nama displayNone" value="Kusuka" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="stokAwal" class="stokAwal" id="stokAwal">120</label>
+                                <input type="text" name="stok2" id="stok2" class="stok2 displayNone" value="120" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="hargaAwal" class="hargaAwal" id="hargaAwal">Rp15.000</label>
+                                <input type="text" name="harga2" id="harga2" class="harga2 displayNone" value="Rp15.000" disabled>
+                            </div>
+                        </div>
+                        <div class="cardBawah">
+                            <div class="bagian">
+                                <label for="namaAwal" class="namaAwal" id="namaAwal">Kusuka</label>
+                                <input type="text" name="nama" id="nama" class="nama displayNone" value="Kusuka" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="stokAwal" class="stokAwal" id="stokAwal">120</label>
+                                <input type="text" name="stok2" id="stok2" class="stok2 displayNone" value="120" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="hargaAwal" class="hargaAwal" id="hargaAwal">Rp15.000</label>
+                                <input type="text" name="harga2" id="harga2" class="harga2 displayNone" value="Rp15.000" disabled>
+                            </div>
+                        </div>
+                        <div class="cardBawah">
+                            <div class="bagian">
+                                <label for="namaAwal" class="namaAwal" id="namaAwal">Kusuka</label>
+                                <input type="text" name="nama" id="nama" class="nama displayNone" value="Kusuka" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="stokAwal" class="stokAwal" id="stokAwal">120</label>
+                                <input type="text" name="stok2" id="stok2" class="stok2 displayNone" value="120" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="hargaAwal" class="hargaAwal" id="hargaAwal">Rp15.000</label>
+                                <input type="text" name="harga2" id="harga2" class="harga2 displayNone" value="Rp15.000" disabled>
+                            </div>
+                        </div>
+                        <div class="cardBawah">
+                            <div class="bagian">
+                                <label for="namaAwal" class="namaAwal" id="namaAwal">Kusuka</label>
+                                <input type="text" name="nama" id="nama" class="nama displayNone" value="Kusuka" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="stokAwal" class="stokAwal" id="stokAwal">120</label>
+                                <input type="text" name="stok2" id="stok2" class="stok2 displayNone" value="120" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="hargaAwal" class="hargaAwal" id="hargaAwal">Rp15.000</label>
+                                <input type="text" name="harga2" id="harga2" class="harga2 displayNone" value="Rp15.000" disabled>
+                            </div>
+                        </div>
+                        <div class="cardBawah">
+                            <div class="bagian">
+                                <label for="namaAwal" class="namaAwal" id="namaAwal">Kusuka</label>
+                                <input type="text" name="nama" id="nama" class="nama displayNone" value="Kusuka" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="stokAwal" class="stokAwal" id="stokAwal">120</label>
+                                <input type="text" name="stok2" id="stok2" class="stok2 displayNone" value="120" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="hargaAwal" class="hargaAwal" id="hargaAwal">Rp15.000</label>
+                                <input type="text" name="harga2" id="harga2" class="harga2 displayNone" value="Rp15.000" disabled>
+                            </div>
+                        </div>
+                        <div class="cardBawah">
+                            <div class="bagian">
+                                <label for="namaAwal" class="namaAwal" id="namaAwal">Kusuka</label>
+                                <input type="text" name="nama" id="nama" class="nama displayNone" value="Kusuka" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="stokAwal" class="stokAwal" id="stokAwal">120</label>
+                                <input type="text" name="stok2" id="stok2" class="stok2 displayNone" value="120" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="hargaAwal" class="hargaAwal" id="hargaAwal">Rp15.000</label>
+                                <input type="text" name="harga2" id="harga2" class="harga2 displayNone" value="Rp15.000" disabled>
+                            </div>
+                        </div>
+                        <div class="cardBawah">
+                            <div class="bagian">
+                                <label for="namaAwal" class="namaAwal" id="namaAwal">Kusuka</label>
+                                <input type="text" name="nama" id="nama" class="nama displayNone" value="Kusuka" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="stokAwal" class="stokAwal" id="stokAwal">120</label>
+                                <input type="text" name="stok2" id="stok2" class="stok2 displayNone" value="120" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="hargaAwal" class="hargaAwal" id="hargaAwal">Rp15.000</label>
+                                <input type="text" name="harga2" id="harga2" class="harga2 displayNone" value="Rp15.000" disabled>
+                            </div>
+                        </div>
+                        <div class="cardBawah">
+                            <div class="bagian">
+                                <label for="namaAwal" class="namaAwal" id="namaAwal">Kusuka</label>
+                                <input type="text" name="nama" id="nama" class="nama displayNone" value="Kusuka" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="stokAwal" class="stokAwal" id="stokAwal">120</label>
+                                <input type="text" name="stok2" id="stok2" class="stok2 displayNone" value="120" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="hargaAwal" class="hargaAwal" id="hargaAwal">Rp15.000</label>
+                                <input type="text" name="harga2" id="harga2" class="harga2 displayNone" value="Rp15.000" disabled>
+                            </div>
+                        </div>
+                        <div class="cardBawah">
+                            <div class="bagian">
+                                <label for="namaAwal" class="namaAwal" id="namaAwal">Kusuka</label>
+                                <input type="text" name="nama" id="nama" class="nama displayNone" value="Kusuka" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="stokAwal" class="stokAwal" id="stokAwal">120</label>
+                                <input type="text" name="stok2" id="stok2" class="stok2 displayNone" value="120" disabled>
+                            </div>
+                            <div class="bagian">
+                                <label for="hargaAwal" class="hargaAwal" id="hargaAwal">Rp15.000</label>
+                                <input type="text" name="harga2" id="harga2" class="harga2 displayNone" value="Rp15.000" disabled>
+                            </div>
+                        </div>
+                        
                     </div>
-                    <div class="cardBawah">
-                        <div class="bagian">
-                            <p class="namaBrg2">Kusuka</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="stok2">120</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="harga2">Rp15.000</p>
-                        </div>
-                    </div>
-                    <div class="cardBawah">
-                        <div class="bagian">
-                            <p class="namaBrg2">Kusuka</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="stok2">120</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="harga2">Rp15.000</p>
-                        </div>
-                    </div>
-                    <div class="cardBawah">
-                        <div class="bagian">
-                            <p class="namaBrg2">Kusuka</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="stok2">120</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="harga2">Rp15.000</p>
-                        </div>
-                    </div>
-                    <div class="cardBawah">
-                        <div class="bagian">
-                            <p class="namaBrg2">Biore</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="stok2">120</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="harga2">Rp15.000</p>
-                        </div>
-                    </div>
-                    <div class="cardBawah">
-                        <div class="bagian">
-                            <p class="namaBrg2">Kusuka</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="stok2">120</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="harga2">Rp15.000</p>
-                        </div>
-                    </div>
-                    <div class="cardBawah">
-                        <div class="bagian">
-                            <p class="namaBrg2">Kusuka</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="stok2">120</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="harga2">Rp15.000</p>
-                        </div>
-                    </div>
-                    <div class="cardBawah">
-                        <div class="bagian">
-                            <p class="namaBrg2">Kusuka</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="stok2">120</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="harga2">Rp15.000</p>
-                        </div>
-                    </div>
-                    <div class="cardBawah">
-                        <div class="bagian">
-                            <p class="namaBrg2">Kusuka</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="stok2">120</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="harga2">Rp15.000</p>
-                        </div>
-                    </div>
-                    <div class="cardBawah">
-                        <div class="bagian">
-                            <p class="namaBrg2">Kusuka</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="stok2">120</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="harga2">Rp15.000</p>
-                        </div>
-                    </div>
-                    <div class="cardBawah">
-                        <div class="bagian">
-                            <p class="namaBrg2">Biore</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="stok2">120</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="harga2">Rp15.000</p>
-                        </div>
-                    </div>
-                    <div class="cardBawah">
-                        <div class="bagian">
-                            <p class="namaBrg2">Kusuka</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="stok2">120</p>
-                        </div>
-                        <div class="bagian">
-                            <p class="harga2">Rp15.000</p>
-                        </div>
-                    </div>
-                </div>
+                </form>
             </div>
             <div class="bagianKanan">
                 <div class="bagianKananAtas">
