laopran keuangan week beres

--- a/Code/laporanKeuangan/laporanKeuangan.html
+++ b/Code/laporanKeuangan/laporanKeuangan.html
@@ -63,7 +63,7 @@
         <div class="kotakBawah">
             <div class="kotakJudul">
                 <div class="cardJudul">
-                    <p class="opsi">Harian</p>
+                    <p class="opsi">Mingguan</p>
                 </div>
                 <div class="cardJudul">
                     <p class="opsi">Bulanan</p>
@@ -82,12 +82,15 @@
 
                     <!-- untuk harian -->
                     <!-- <input type="text" name="session-date" id="session-date" placeholder="Select Date" onfocus="(this.type='date')"> -->
+
+                    <!-- untuk mingguan -->
+                    <input type="text" name="session-week" id="session-week" placeholder="Select Week" onfocus="(this.type='week')">
                     
                     <!-- untuk bulanan -->
-                    <input type="text" name="session-month" id="session-month" placeholder="Select Month" onfocus="(this.type='month')">
+                    <!-- <input type="text" name="session-month" id="session-month" placeholder="Select Month" onfocus="(this.type='month')"> -->
 
                     <!-- untuk tahunan -->
-                    <div class="tahunan">
+                    <!-- <div class="tahunan">
                         <select name="session-year" id="session-year" class="session-year">
                             <option value="">Select Year</option>
                             <option value="">2018</option>
@@ -97,7 +100,7 @@
                             <option value="">2022</option>
                             <option value="">2023</option>
                         </select>
-                    </div>
+                    </div> -->
 
                     <div class="svgPilih">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
