--- a/Code/checkout/checkout.html
+++ b/Code/checkout/checkout.html
@@ -123,7 +123,7 @@
             <div class="pembayaran">
                 <div class="bayarSvg" style="background-image:url(../image/pembayaran.svg) ;"></div>
                 <p class="tulisanBayar">Pembayaran</p>
-                <p class="harga tulisan2">TRANSFER</p>
+                <p class="harga tulisan2">PILIH</p>
             </div>
         </div>
         <div class="bagianBawah">
