--- a/Code/bljr/bljr3.html
+++ b/Code/bljr/bljr3.html
@@ -41,6 +41,17 @@
         </div>
     </form>
 
+    
+    <!-- <div class="main2"></div>
+    <div class="main">
+        <div class="svgBg" style="background-image: url(../image/Mask\ group.png);"></div>
+        <div class="svgBg2 displayNone" style="background-image: url(../image/mask2.png);"></div>
+    </div> -->
+
+    <div class="kotak">
+        <div class="kotak1" id="kotak1" style="background-image: url(../image/bg1.png);"></div>
+        <div class="kotak2 displayNone" id="kotak2" style="background-image: url(../image/bg2.png);"></div>
+    </div>
 
     <!-- <button id="theButton" onclick="clickMe()">Click me!</button>
     <input type="text" name="popup" id="popup" class="hide"> -->
