--- a/Code/bljr/bljr3.html
+++ b/Code/bljr/bljr3.html
@@ -56,6 +56,8 @@
     <!-- <button id="theButton" onclick="clickMe()">Click me!</button>
     <input type="text" name="popup" id="popup" class="hide"> -->
 
+    <input type="week" class="minggu">
+
     <script src="bljr3.js"></script>
 </body>
 </html>
