byw bagian atas beres

--- a/Code/buildYourWarung/buildYourWarung.html
+++ b/Code/buildYourWarung/buildYourWarung.html
@@ -70,6 +70,212 @@
                 </p>
             </div>
         </div>
+        <div class="bawah">
+            <div class="boothBundle">
+                <div class="sub">
+                    <p class="subJudul">Container Booth + Bundle</p>
+                    <div class="garis11"></div>
+                </div>
+                <div class="paket">
+                    <div class="cardPaket">
+                        <div class="cardPaket1" style="background-image: url(../image/bg1.png);">
+                            <div class="kiri1" style="background-image: url(../image/kiri1.png);"></div>
+                            <div class="tengah1">
+                                <p class="judulCard1">WARUNG KESEHATAN</p>
+                                <p class="deskripsiCard1">Dapatkan Booth Container
+                                    berikut dengan isinya!</p>
+                                <div class="beliCard1">BELI SEKARANG!</div>
+                            </div>
+                            <div class="kanan1" style="background-image: url(../image/kanan1.png);"></div>
+                        </div>
+                        <div class="cardPaket2 displayNone" style="background-image: url(../image/bg2.png);">
+                            <div class="kiri2" style="background-image: url(../image/hover1.png);"></div>
+                            <div class="tengah2">
+                                <p class="judulCard2">WARUNG KESEHATAN</p>
+                                <div class="deskripsiCard2">
+                                    <div class="deskripsiKiriCard2">
+                                        Warna: Hitam 
+                                        <br> Dimensi: 4x3x2.5 m 
+                                        <br> 
+                                        <br> Mendapatkan: 
+                                        <br> Container Booth 
+                                        <br> Bundle Obat-obatan
+                                        <br> (8 Jenis Produk)
+                                        <br>
+                                        <br> *Termasuk Ongkir
+                                    </div>
+                                    <div class="deskripsiKananCard2">
+                                        Isi Bundle Obat-obatan: <br>
+                                        Antis - 50 pcs <br>
+                                        Minyak angin - 120 pcs <br>
+                                        Tolak angin - 200 pcs <br>
+                                        Blackmores - 40 pcs <br>
+                                        Vitacimin - 240 pcs <br>
+                                        Betadine - 120 pcs <br>
+                                        Diapet - 200 pcs <br>
+                                        Adem sari - 200 pcs
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="kanan2">
+                                <div class="garis12"></div>
+                                <div class="bagKanan">
+                                    <p class="harga10">Rp8.000.000</p>
+                                    <div class="beliCard2">BELI SEKARANG!</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cardPaket">
+                        <div class="cardPaket1" style="background-image: url(../image/bg1.png);">
+                            <div class="kiri1" style="background-image: url(../image/kiri2.png);"></div>
+                            <div class="tengah1">
+                                <p class="judulCard1">WARUNG SEKOLAH</p>
+                                <p class="deskripsiCard1">Dapatkan Booth Container
+                                    berikut dengan isinya!</p>
+                                <div class="beliCard1">BELI SEKARANG!</div>
+                            </div>
+                            <div class="kanan1" style="background-image: url(../image/kanan2.png);"></div>
+                        </div>
+                        <div class="cardPaket2 displayNone" style="background-image: url(../image/bg2.png);">
+                            <div class="kiri2" style="background-image: url(../image/hover2.png);"></div>
+                            <div class="tengah2">
+                                <p class="judulCard2">WARUNG SEKOLAH</p>
+                                <div class="deskripsiCard2">
+                                    <div class="deskripsiKiriCard2">
+                                        Warna: Hijau 
+                                        <br> Dimensi: 5x4x2.5 m 
+                                        <br> 
+                                        <br> Mendapatkan: 
+                                        <br> Container Booth 
+                                        <br> Bundle Cemilan
+                                        <br> (8 Jenis Produk)
+                                        <br>
+                                        <br> *Termasuk Ongkir
+                                    </div>
+                                    <div class="deskripsiKananCard2">
+                                        Isi Bundle Cemilan: <br>
+                                        Kusuka - 50 pcs <br>
+                                        Chitato - 50 pcs <br>
+                                        Cimory - 60 pcs <br>
+                                        Freshtea - 60 pcs <br>
+                                        Oreo - 120 pcs <br>
+                                        Tango - 80 pcs <br>
+                                        Rebo - 60 pcs <br>
+                                        Pocky - 50 pcs
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="kanan2">
+                                <div class="garis12"></div>
+                                <div class="bagKanan">
+                                    <p class="harga10">Rp8.000.000</p>
+                                    <div class="beliCard2">BELI SEKARANG!</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cardPaket">
+                        <div class="cardPaket1" style="background-image: url(../image/bg1.png);">
+                            <div class="kiri1" style="background-image: url(../image/kiri3.png);"></div>
+                            <div class="tengah1">
+                                <p class="judulCard1">WARUNG SEMBAKO</p>
+                                <p class="deskripsiCard1">Dapatkan Booth Container
+                                    berikut dengan isinya!</p>
+                                <div class="beliCard1">BELI SEKARANG!</div>
+                            </div>
+                            <div class="kanan1" style="background-image: url(../image/kanan3.png);"></div>
+                        </div>
+                        <div class="cardPaket2 displayNone" style="background-image: url(../image/bg2.png);">
+                            <div class="kiri2" style="background-image: url(../image/hover3.png);"></div>
+                            <div class="tengah2">
+                                <p class="judulCard2">WARUNG SEMBAKO</p>
+                                <div class="deskripsiCard2">
+                                    <div class="deskripsiKiriCard2">
+                                        Warna: Hitam 
+                                        <br> Dimensi: 4x3x2.5 m 
+                                        <br> 
+                                        <br> Mendapatkan: 
+                                        <br> Container Booth 
+                                        <br> Bundle Kebutuhan RT
+                                        <br> (8 Jenis Produk)
+                                        <br>
+                                        <br> *Termasuk Ongkir
+                                    </div>
+                                    <div class="deskripsiKananCard2">
+                                        Isi Bundle Kebutuhan RT: <br>
+                                        Pepsodent - 50 pcs <br>
+                                        Biore - 60 pcs <br>
+                                        Sunlight - 120 pcs <br>
+                                        MamyPoko - 50 pcs <br>
+                                        Rinso - 60 pcs <br>
+                                        Indomie - 200 pcs <br>
+                                        Kapal Api - 200 pcs <br>
+                                        Wipol - 80 pcs
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="kanan2">
+                                <div class="garis12"></div>
+                                <div class="bagKanan">
+                                    <p class="harga10">Rp8.000.000</p>
+                                    <div class="beliCard2">BELI SEKARANG!</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cardPaket">
+                        <div class="cardPaket1" style="background-image: url(../image/bg1.png);">
+                            <div class="kiri1" style="background-image: url(../image/kiri4.png);"></div>
+                            <div class="tengah1">
+                                <p class="judulCard1">WARUNG ALAT TULIS</p>
+                                <p class="deskripsiCard1">Dapatkan Booth Container
+                                    berikut dengan isinya!</p>
+                                <div class="beliCard1">BELI SEKARANG!</div>
+                            </div>
+                            <div class="kanan1" style="background-image: url(../image/kanan4.png);"></div>
+                        </div>
+                        <div class="cardPaket2 displayNone" style="background-image: url(../image/bg2.png);">
+                            <div class="kiri2" style="background-image: url(../image/hover4.png);"></div>
+                            <div class="tengah2">
+                                <p class="judulCard2">WARUNG ALAT TULIS</p>
+                                <div class="deskripsiCard2">
+                                    <div class="deskripsiKiriCard2">
+                                        Warna: Hitam 
+                                        <br> Dimensi: 4x3x2.5 m 
+                                        <br> 
+                                        <br> Mendapatkan: 
+                                        <br> Container Booth 
+                                        <br> Bundle Alat Tulis
+                                        <br> (8 Jenis Produk)
+                                        <br>
+                                        <br> *Termasuk Ongkir
+                                    </div>
+                                    <div class="deskripsiKananCard2">
+                                        Isi Bundle Alat Tulis: <br>
+                                        Pena - 240 pcs <br>
+                                        Pensil - 240 pcs <br>
+                                        Penggaris - 120 pcs <br>
+                                        Penghapus - 240 pcs <br>
+                                        Stapler - 120 pcs <br>
+                                        Stipo - 240 pcs <br>
+                                        Busur - 120 pcs <br>
+                                        Peruncing - 120 pcs
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="kanan2">
+                                <div class="garis12"></div>
+                                <div class="bagKanan">
+                                    <p class="harga10">Rp8.000.000</p>
+                                    <div class="beliCard2">BELI SEKARANG!</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     
     <!-- footer -->
@@ -139,5 +345,7 @@
             <p>Hak Cipta @ JualanYuk! 2022</p>
         </div>
     </div>
+
+    <script src="buildYourWarung.js"></script>
 </body>
 </html>
